--- a/DevForm/DevFormAz/DevFormAz/Views/Home/ProfilePage.cshtml
+++ b/DevForm/DevFormAz/DevFormAz/Views/Home/ProfilePage.cshtml
@@ -30,7 +30,7 @@
 
                                     <div class="col-md-4 col-4 col-sm-4 d-flex justify-content-center">
                                         <div class="postCount">
-                                            <a href=""><i class="fas fa-bullhorn mr-2"></i>0</a>
+                                            <a href=""><i class="fas fa-bullhorn mr-2"></i>@Model.Forms.Count()</a>
                                             <p>Postlar</p>
                                         </div>
                                     </div>
