--- a/DevForm/DevFormAz/DevFormAz/Views/Home/ProfilePage.cshtml
+++ b/DevForm/DevFormAz/DevFormAz/Views/Home/ProfilePage.cshtml
@@ -205,7 +205,7 @@
                                             </div>
                                             <div class="postUserName">
                                                 <p>@item.UserDetail.User.FirstName @item.UserDetail.User.Lastname</p>
-                                                <span>@item.CreatedDate.ToString("dd-MM-yyyy")</span>
+                                                <span>@item.FormTime.ToString("dd.MM.yyyy")</span>
                                             </div>
                                         </div>
                                     </div>
