--- a/DevForm/DevFormAz/DevFormAz/Views/Home/UserPanel.cshtml
+++ b/DevForm/DevFormAz/DevFormAz/Views/Home/UserPanel.cshtml
@@ -28,10 +28,10 @@
                                     <input type="email" class="form-control" placeholder="Email" value="@Model.User.Email" name="email">
                                 </div>
                                 <div class="col-md-6 mb-1">
-                                    <input type="password" class="form-control" placeholder="Yeni şifrə" name="password">
+                                    <input type="password" class="form-control" placeholder="Yeni şifrə"  name="newpassword">
                                 </div>
                                 <div class="col-md-6 mb-1">
-                                    <input type="password" class="form-control" placeholder="Şifrənin təkrarı" name="repassword">
+                                    <input type="password" class="form-control" placeholder="Şifrənin təkrarı"  name="repassword">
                                 </div>
                                 <div class="col-md-6 mb-1">
                                     <input type="text" class="form-control" placeholder="İxtisas" value="@Model.Specialty" name="specialty">
