--- a/DevForm/DevFormAz/DevFormAz/Views/Home/FormPage.cshtml
+++ b/DevForm/DevFormAz/DevFormAz/Views/Home/FormPage.cshtml
@@ -58,7 +58,7 @@
                                                     </div>
                                                     <div class="form-group">
                                                         <label for="upload-file" class="col-form-label">Şəkil yüklə</label>
-                                                        <input type="file" name="image" multiple class="form-control fileinput" />
+                                                        <input type="file" name="formImg" multiple class="form-control fileinput" />
                                                     </div>
                                                     <div class="form-group">
                                                         <label for="message-text" class="col-form-label">Tag əlavə et</label>
@@ -97,7 +97,7 @@
                                                 </div>
                                                 <div class="postUserName">
                                                     <p>@item.UserDetail.User.FirstName @item.UserDetail.User.Lastname</p>
-                                                    <span>@item.CreatedDate.ToString("dd-MM-yyyy")</span>
+                                                    <span>@item.FormTime.ToString("dd.MM.yyyy")</span>
                                                 </div>
                                             </div>
                                         </div>
